<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wake Alarm</string>
    <string name="title_activity_alarm">Alarm</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_edit_alarm">Set Alarm</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_file_list">Choose file</string>
    <!-- AboutActivity -->
    <string name="version_text">WakeAlarm version %1$s</string>
    <string name="sourcecode_text">https://code.google.com/p/wakealarm/</string>
    <string name="about_text">Copyright 2014 Tim Rochford. Licensed under LGPL.</string>
    <string name="review">Review</string>
    <string name="contact_text">androidwakealarm@gmail.com</string>
    <string name="couldnt_launch_market">Failed to launch Market</string>
    <string name="icons_copyright">Icons created by Olof (http://www.yay.se/).</string>
    <string name="audio_copyright">rooster.mp3 (http://soundbible.com/1218-Rooster-Crow.html) by Mike Koenig is licensed under Attribution 3.0  (http://creativecommons.org/licenses/by/3.0/)beep.mp3 Recorded (http://soundbible.com/535-Alarm-Clock.html) by Mike Koenig is licensed under Attribution 3.0  (http://creativecommons.org/licenses/by/3.0/). railcrossing.mp3 (http://soundbible.com/2070-Railroad-Crossing-Bell.html) by Brylon Terry is licensed under Attribution 3.0  (http://creativecommons.org/licenses/by/3.0/)</string>
    <!-- HelpActivity -->
    <string name="help_text">Alarms will not work if the phone is off. Alarms will work after the phone is switched back on. If the volume is low then the alarm may not be heard. Alarm volume is set in the phone setings -&gt; Sound -&gt; Volume -&gt; Alarm volume. Only 1 powernap can be active at a time.</string>
    <!-- AlarmActivity -->
    <string name="time_now">Time now is </string>
    <string name="stopAlarmText">touch screen to stop alarm</string>
    <!-- EditAlarmActivity -->
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="description_default">Alarm Description</string>
    <!-- OptionsActivity -->
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="sound">sound</string>
    <string name="testAlarm">Test Alarm</string>
    <string name="settings">Settings</string>
    <!-- MainActivity -->
    <string name="max_alarms">Maximum alarms reached. To create a new alarm, delete an existing alarm.</string>
    <string name="emptyListViewText">No alarms</string>
    <string name="cancelpowernap">Cancel Power Nap?</string>
    <string name="replacepowernap">Replace existing Power Nap?</string>
    <string name="cancel">Cancel</string>
    <string name="dontcancel">Keep</string>
    <string name="powerNapBtn">PowerNap</string>
    <string name="powernap_length">PowerNap time:</string>
    <string name="ok">OK</string>
    <string name="text_alarm_description">Test alarm</string>
    <string name="recurrence_once_only">ONCE</string>
    <string name="recurrence_weekend">WEEKENDS</string>
    <string name="recurrence_weekdays">WEEKDAYS</string>
    <string name="recurrence_everyday">DAILY</string>
</resources>