<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity" >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <ImageButton
                    android:id="@+id/btReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/review"
                    android:onClick="launchMarket"
                    android:src="@drawable/ic_write_review" />
                <TextView
                    style="@style/About"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_text" />
                <TextView
                    style="@style/About"
                    android:id="@+id/textVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version_text" />
                <TextView
                    style="@style/About"
                    android:id="@+id/textContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_text" />
                <TextView
                    style="@style/About"
                    android:id="@+id/textSourceCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sourcecode_text" />
                <TextView
                    android:id="@+id/textIconCopyright"
                    style="@style/About"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icons_copyright" />
                <TextView
                    android:id="@+id/textAudioCopyright"
                    style="@style/About"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/audio_copyright" />
                <TextView
                    style="@style/Copyright_Small"
                    android:id="@+id/textgpl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
                <TextView
                    style="@style/Copyright_Small"
                    android:id="@+id/textlgpl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>