<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:textStyle="bold"
    android:typeface="sans" >
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <ImageButton
                android:id="@+id/btSelectSound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sound"
                android:onClick="selectSound"
                android:src="@drawable/ic_sound" />
            <ImageButton
                android:id="@+id/btAlarmTest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="startAlarm"
                android:contentDescription="@string/testAlarm"
                android:src="@drawable/ic_test_alarm"  />
            <ImageButton
                android:id="@+id/btSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/settings"
                android:onClick="startSettings"
                android:src="@drawable/ic_settings" />
            <ImageButton
                android:id="@+id/btAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/about"
                android:onClick="startAbout"
                android:src="@drawable/ic_about" />
            <ImageButton
                android:id="@+id/btHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="startHelp"
                android:contentDescription="@string/help"
                android:src="@drawable/ic_help" />
            </LinearLayout>
    </ScrollView>
</LinearLayout>